--- a/LoydCrafts.WebSite/Pages/_ViewImports.cshtml
+++ b/LoydCrafts.WebSite/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using LoydCrafts.WebSite
-@namespace LoydCrafts.WebSite.Pages
+@using ReuseSU.WebSite
+@namespace ReuseSU.WebSite.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
