--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Home page";
 }
 
+<!--Testing GitHub for Alisa!  -->
+
 <div class="text-center">
     <h1 class="display-4">ReuseSU</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
