Linked Welcome page to User Agreement page via wireframe image.

--- a/LoydCrafts.WebSite/Pages/Welcome.cshtml
+++ b/LoydCrafts.WebSite/Pages/Welcome.cshtml
@@ -6,4 +6,4 @@
 
 <h1>Welcome</h1>
 
-<img src="~/img/01_welcome.jpg" />
+<a class="nav-link text-dark" asp-area="" asp-page="/UserAgreement"><img src="~/img/01_welcome.jpg" /></a>
