Linked User Agreement page to Tutorial Start page via wireframe image.

--- a/LoydCrafts.WebSite/Pages/UserAgreement.cshtml
+++ b/LoydCrafts.WebSite/Pages/UserAgreement.cshtml
@@ -6,4 +6,4 @@
 
 <h1>UserAgreement</h1>
 
-<img src="~/img/02_user_agreement.jpg" />
+<a class="nav-link text-dark" asp-area="" asp-page="/TutorialStart"> <img src="~/img/02_user_agreement.jpg" /></a>
