Linked Tutorial Pre Post page to New Post: SU Purchase status page via wireframe image

--- a/LoydCrafts.WebSite/Pages/TutorialPrePost.cshtml
+++ b/LoydCrafts.WebSite/Pages/TutorialPrePost.cshtml
@@ -6,4 +6,4 @@
 
 <h1>TutorialPrePost</h1>
 
-<img src="~/img/04_tutorial_prepost.jpg" />
+<a class="nav-link text-dark" asp-area="" asp-page="/NewPostSUPurchase"> <img src="~/img/04_tutorial_prepost.jpg" /></a>
