--- a/LoydCrafts.WebSite/Pages/NewPostSUPurchase.cshtml
+++ b/LoydCrafts.WebSite/Pages/NewPostSUPurchase.cshtml
@@ -6,4 +6,5 @@
 
 <h1>NewPostSUPurchase</h1>
 
+<a class="nav-link text-dark" asp-area="" asp-page="/NewPostCategorySelection"> <img src="~/img/05_su_purchased_q.jpg" /></a>
 <img src="~/img/05_su_purchased_q.jpg" />
