Linked New Post: Category Selection to New Post: Item Specifics via wireframe image.

--- a/LoydCrafts.WebSite/Pages/NewPostCategorySelection.cshtml
+++ b/LoydCrafts.WebSite/Pages/NewPostCategorySelection.cshtml
@@ -6,4 +6,4 @@
 
 <h1>NewPostCategorySelection</h1>
 
-<img src="~/img/06_category_q.jpg" />
+<a class="nav-link text-dark" asp-area="" asp-page="/NewPostItemSpecifics"> <img src="~/img/06_category_q.jpg" /></a>
