Linked New Post: Item Specifics to Tutorial After Posting Page via wireframe image.

--- a/LoydCrafts.WebSite/Pages/NewPostItemSpecifics.cshtml
+++ b/LoydCrafts.WebSite/Pages/NewPostItemSpecifics.cshtml
@@ -6,4 +6,4 @@
 
 <h1>NewPostItemSpecifics</h1>
 
-<img src="~/img/07_fill_out_info_boxes.jpg" />
+<a class="nav-link text-dark" asp-area="" asp-page="/TutorialAfterPosting"> <img src="~/img/07_fill_out_info_boxes.jpg" /></a>
