--- a/LoydCrafts.WebSite/Pages/TutorialAfterPosting.cshtml
+++ b/LoydCrafts.WebSite/Pages/TutorialAfterPosting.cshtml
@@ -6,4 +6,4 @@
 
 <h1>TutorialAfterPosting</h1>
 
-<img src="~/img/08_made_post.jpg" />
+<a class="nav-link text-dark" asp-area="" asp-page="/TutorialItemReadView"> <img src="~/img/08_made_post.jpg" /></a>
