--- a/LoydCrafts.WebSite/Pages/TutorialItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/TutorialItemReadView.cshtml
@@ -6,4 +6,4 @@
 
 <h1>TutorialItemReadView</h1>
 
-<img src="~/img/09_post_menu.jpg" />
+<a class="nav-link text-dark" asp-area="" asp-page="/TutorialEnd"> <img src="~/img/09_post_menu.jpg" /></a>
