Linked Tutorial End back to Index (homepage) via wireframe image.

--- a/LoydCrafts.WebSite/Pages/TutorialEnd.cshtml
+++ b/LoydCrafts.WebSite/Pages/TutorialEnd.cshtml
@@ -5,5 +5,4 @@
 }
 
 <h1>TutorialEnd</h1>
-
-<img src="~/img/10_tutorial_finish.jpg" />
+<a class="nav-link text-dark" asp-area="" asp-page="/Index"> <img src="~/img/10_tutorial_finish.jpg" /></a>
