Commented out original index (homepage) card view code and inserted static wireframe image of ReuseSU homepage with problematic post, linked to ItemReadView via the image to start the Flagging scenario.

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -11,16 +11,19 @@
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
+<a class="nav-link text-dark" asp-area="" asp-page="/ItemReadView"> <img src="~/img/Danial_1_homepage_wEvilPost.jpg" /></a>
 
+<!--
 <div class="card-columns">
-    @foreach (var product in Model.Products)
+    !AT foreach (var product in Model.Products)
     {
         <div class="card">
-            <div class="card-img" style="background-image: url('@product.Image');">
+            <div class="card-img" style="background-image: url('!AT product.Image');">
             </div>
             <div class="card-body">
-                <h5 class="card-title">@product.Title</h5>
+                <h5 class="card-title">!AT product.Title</h5>
             </div>
         </div>
     }
 </div>
+    -->
