--- a/LoydCrafts.WebSite/Pages/ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/ItemReadView.cshtml
@@ -6,4 +6,6 @@
 
 <h1>ItemReadView</h1>
 
+<a class="nav-link text-dark" asp-area="" asp-page="/AboutFlagging"> About Flagging </a>
+<a class="nav-link text-dark" asp-area="" asp-page="/AboutFlagging"> Flag Item </a>
 <img src="~/img/Danial_2_EvilPost.jpg" />
