Fixed link to Flag Post item (linked to wrong page initially).

--- a/LoydCrafts.WebSite/Pages/ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/ItemReadView.cshtml
@@ -7,5 +7,5 @@
 <h1>ItemReadView</h1>
 
 <a class="nav-link text-dark" asp-area="" asp-page="/AboutFlagging"> About Flagging </a>
-<a class="nav-link text-dark" asp-area="" asp-page="/AboutFlagging"> Flag Item </a>
+<a class="nav-link text-dark" asp-area="" asp-page="/Flag Post"> Flag Post </a>
 <img src="~/img/Danial_2_EvilPost.jpg" />
