Linked About Flagging back to Item Read View page via wireframe image.

--- a/LoydCrafts.WebSite/Pages/AboutFlagging.cshtml
+++ b/LoydCrafts.WebSite/Pages/AboutFlagging.cshtml
@@ -5,5 +5,4 @@
 }
 
 <h1>AboutFlagging</h1>
-
-<img src="~/img/Daniel_3_flag_info.jpg" />
+<a class="nav-link text-dark" asp-area="" asp-page="/ItemReadView"> <img src="~/img/Daniel_3_flag_info.jpg" /></a>
