Linked Flag Post page to Flagging Confirmation Page via wireframe image.

--- a/LoydCrafts.WebSite/Pages/FlagPost.cshtml
+++ b/LoydCrafts.WebSite/Pages/FlagPost.cshtml
@@ -5,5 +5,4 @@
 }
 
 <h1>FlagPost</h1>
-
-<img src="~/img/Daniel_4_flagging.jpg" />
+<a class="nav-link text-dark" asp-area="" asp-page="/FlaggingConfirmation"> <img src="~/img/Daniel_4_flagging.jpg" /></a>
