--- a/LoydCrafts.WebSite/Pages/FlaggingConfirmation.cshtml
+++ b/LoydCrafts.WebSite/Pages/FlaggingConfirmation.cshtml
@@ -5,5 +5,4 @@
 }
 
 <h1>FlaggingConfirmation</h1>
-
-<img src="~/img/Daniel_5_Flagged.jpg" />
+<a class="nav-link text-dark" asp-area="" asp-page="/DemoEnd"> <img src="~/img/Daniel_5_Flagged.jpg" /></a>
