--- a/LoydCrafts.WebSite/Pages/DemoEnd.cshtml
+++ b/LoydCrafts.WebSite/Pages/DemoEnd.cshtml
@@ -4,5 +4,6 @@
     ViewData["Title"] = "DemoEnd";
 }
 
+<a class="nav-link text-dark" asp-area="" asp-page="/TutorialStart"><img src="~/img/Daniel_6_all_is_good_in_the_world.jpg" /></a>
+
 <h1>DemoEnd</h1>
-<img src="~/img/Daniel_6_all_is_good_in_the_world.jpg" />
