Header reactived in Pages>> Shared >> _Layout

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -9,7 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- <header>
+
+     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-SURed border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">ReuseSU.WebSite</a>
@@ -30,7 +31,7 @@
             </div>
         </nav>
     </header>
-        -->
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
