--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -17,17 +17,17 @@
     <a class="nav-link text-dark" asp-area="" asp-page="/ItemReadView"> <img src="~/img/Danial_1_homepage_wEvilPost.jpg" /></a>
 -->
 
-<!--
-<div class="card-columns">
-    !AT foreach (var product in Model.Products)
-    {
-        <div class="card">
-            <div class="card-img" style="background-image: url('!AT product.Image');">
+<
+    <div class="card-columns">
+        @foreach (var product in Model.Products)
+        {
+            <div class="card">
+                <div class="card-img" style="background-image: url('@product.Image');">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">@product.Title</h5>
+                </div>
             </div>
-            <div class="card-body">
-                <h5 class="card-title">!AT product.Title</h5>
-            </div>
-        </div>
-    }
-</div>
-    -->
+        }
+    </div>
+    
