Added div in _Layout inside container but outside main, with a class of reuse-header.

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -33,6 +33,11 @@
     </header>
 
     <div class="container">
+        
+        <!-- Our custom built header class. -->
+        <div class="reuse-header"></div>
+        
+        
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
