--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -1,4 +1,18 @@
-﻿.checked {
+﻿
+.reuse-header {
+    height: 100px;
+    background-color: red;
+}
+
+
+
+
+
+
+
+
+
+.checked {
     color: orange;
 }
 
