Created a div container for holding the two portions of the sidebar in the _Layout file, inside the overarching container.

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -37,6 +37,8 @@
         <!-- Our custom built header class. -->
         <div class="reuse-header"></div>
         
+        <!-- A container for the sidebar information-->
+        <div class"container sidebar"></div>
         
         <main role="main" class="pb-3">
             @RenderBody()
