Created div with class "sidebar-upper" inside the sidebar container.

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -38,7 +38,9 @@
         <div class="reuse-header"></div>
         
         <!-- A container for the sidebar information-->
-        <div class"container sidebar"></div>
+        <div class"container sidebar">
+            <div class="sidebar-upper"></div>
+        </div>
         
         <main role="main" class="pb-3">
             @RenderBody()
