Created a div with class "sidebar-lower" inside the sidebar container in _Layout.

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -40,6 +40,7 @@
         <!-- A container for the sidebar information-->
         <div class"container sidebar">
             <div class="sidebar-upper"></div>
+            <div class="sidebar-lower"></div>
         </div>
         
         <main role="main" class="pb-3">
