Bugfix: Added "=" into sidebar container class call.

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
         <div class="reuse-header"></div>
         
         <!-- A container for the sidebar information-->
-        <div class"container sidebar">
+        <div class="container sidebar">
             <div class="sidebar-upper"></div>
             <div class="sidebar-lower"></div>
         </div>
