--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
         
         
         <!-- A container for the sidebar information-->
-        <div class="container sidebar">
+        <div class="sidebar">
             <div class="sidebar-upper"></div>
             <div class="sidebar-lower"></div>
         </div>
