Three test divs in class "listing" created in _Layout in <main>, with placeholder info in .css so they can be seen..

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -47,6 +47,9 @@
         </div>
         
         <main role="main" class="pb-3">
+            <div class="listing"></div>
+            <div class="listing"></div>
+            <div class="listing"></div>
             @RenderBody()
         </main>
     </div>
