Float left added to .sidebar, float right added to .listing

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -7,6 +7,7 @@
 .sidebar {
     background-color: blue;
     width: 600px;
+    float: left;
     height: 500px;
 }
 
@@ -23,6 +24,7 @@
 .listing {
     height: 100px;
     width: 200px;
+    float: right;
     background-color: pink;
     margin-top: 20px;
 }
