Added .listing-image classed divs inside each .listing div in _Layout

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -47,9 +47,9 @@
         </div>
         
         <main role="main" class="pb-3">
-            <div class="listing"></div>
-            <div class="listing"></div>
-            <div class="listing"></div>
+            <div class="listing"><div class="listing-img"></div></div>
+            <div class="listing"><div class="listing-img"></div></div>
+            <div class="listing"><div class="listing-img"></div></div>
             @RenderBody()
         </main>
     </div>
