Revert "Added .listing-image classed divs inside each .listing div in _Layout"
This reverts commit 487136f7634f9a787ecc6beb0a74e46e75181478.

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -21,13 +21,14 @@
     background-color: yellow;
 }
 
-
-.listing-img {
+.listing {
     height: 100px;
-    width: 100px;
-    float: left;
-    background-color: magenta;
+    width: 200px;
+    float: right;
+    background-color: pink;
+    margin-top: 20px;
 }
+
 
 .checked {
     color: orange;
