Created a class .listing-img in site.css with placeholder dimensions, background color, float direction.

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -30,6 +30,13 @@
 }
 
 
+.listing-img {
+    height: 100px;
+    width: 100px;
+    float: left;
+    background-color: magenta;
+}
+
 .checked {
     color: orange;
 }
