--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -5,28 +5,34 @@
 }
 
 .sidebar {
-    background-color: blue;
-    width: 600px;
+    background-color: white;
+    width: 280px;
     float: left;
     height: 500px;
 }
 
 .sidebar-upper {
-    height: 10px;
-    background-color: grey;
+    height: 300px;
+    background-color: floralwhite;
+    border: 1px solid #AA0000;
 }
 
+/*The bottom sidebar. Borders individually set so both the upper and the lower sidebar don't combine to form a 2px border between them.*/
 .sidebar-lower {
-    height: 10px;
-    background-color: yellow;
+    height: 200px;
+    background-color: floralwhite;
+    border-bottom: 1px solid #AA0000;
+    border-left: 1px solid #AA0000;
+    border-right: 1px solid #AA0000;
 }
 
 .listing {
     height: 100px;
-    width: 200px;
+    width: 730px;
     float: right;
-    background-color: pink;
-    margin-top: 20px;
+    background-color: floralwhite;
+    border: 1px solid #AA0000;
+    margin-top: 40px;
 }
 
 
@@ -34,7 +40,7 @@
     height: 100px;
     width: 100px;
     float: left;
-    background-color: magenta;
+    background-color: lightgray;
 }
 
 .checked {
