Div with class "Utility-bar" added in "container" class div. Intended for search and new post.

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -39,7 +39,8 @@
 
     <div class="container">
         
-        
+        <div class="utility-bar"></div>
+
         <!-- A container for the sidebar information-->
         <div class="sidebar">
             <div class="sidebar-upper"></div>
