--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -43,8 +43,19 @@
 
         <!-- A container for the sidebar information-->
         <div class="sidebar">
-            <div class="sidebar-upper"></div>
+            
+            <div class="sidebar-upper">
+
+                <button type="button" class="btn btn-outline-dark sidebar-upper-button">Home</button>
+                <button type="button" class="btn btn-outline-dark sidebar-upper-button">About</button>
+                <button type="button" class="btn btn-outline-dark sidebar-upper-button">Usage Guidelines</button>
+                <button type="button" class="btn btn-outline-dark sidebar-upper-button">Tutorial</button>
+                <button type="button" class="btn btn-outline-dark sidebar-upper-button">My Posts</button>
+
+            </div>
+            
             <div class="sidebar-lower"></div>
+
         </div>
         
         <main role="main" class="pb-3">
