--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -27,6 +27,12 @@
     border-right: 1px solid #AA0000;
 }
 
+.sidebar-upper-button {
+    width: 150px;
+    margin: 5px 10px;
+
+}
+
 /*The bottom sidebar. Borders individually set so both the upper and the lower sidebar don't combine to form a 2px border between them.*/
 .sidebar-lower {
     height: 200px;
