Break left hand nav buttons into their own rows

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
             
             <div class="sidebar-upper">
 
-                <button type="button" class="btn btn-outline-dark sidebar-upper-button">Home</button>
+                <button type="button" class="btn btn-outline-dark sidebar-upper-button">Home</button><br />
                 <button type="button" class="btn btn-outline-dark sidebar-upper-button">About</button>
                 <button type="button" class="btn btn-outline-dark sidebar-upper-button">Usage Guidelines</button>
                 <button type="button" class="btn btn-outline-dark sidebar-upper-button">Tutorial</button>
