--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -25,6 +25,7 @@
     background-color: floralwhite;
     border-left: 1px solid #AA0000;
     border-right: 1px solid #AA0000;
+    text-align: center;
 }
 
 .sidebar-upper-button {
