--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -54,7 +54,9 @@
 
             </div>
             
-            <div class="sidebar-lower"></div>
+            <div class="sidebar-lower">
+                <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
+            </div>
 
         </div>
         
