Add CSS section for lower left hand nav filter section

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -1,4 +1,7 @@
-﻿/* .reused-header is our custom built header for ReuseSU*/
+﻿.checkbox{
+}
+
+/* .reused-header is our custom built header for ReuseSU*/
 .reuse-header {
     height: 100px;
     background-color: red;
