--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -56,6 +56,9 @@
             
             <div class="sidebar-lower">
                 <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
+                <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
+                <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
+                <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
             </div>
 
         </div>
