--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -55,6 +55,7 @@
             </div>
             
             <div class="sidebar-lower">
+                <div class="lower-sidebar-text"></div>
                 <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
                 <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
                 <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
