--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
             </div>
             
             <div class="sidebar-lower">
-                <div class="lower-sidebar-text"></div>
+                <div class="lower-sidebar-text">Test Text</div>
                 <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
                 <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
                 <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
