--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -55,6 +55,11 @@
             </div>
             
             <div class="sidebar-lower">
+                
+                <div class="lower-sidebar-text">Test Text</div>
+                <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
+                <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
+                
                 <div class="lower-sidebar-text">Test Text</div>
                 <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
                 <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
