Changed lower sidebar text to match prototype

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -56,11 +56,11 @@
             
             <div class="sidebar-lower">
                 
-                <div class="lower-sidebar-text">Test Text</div>
+                <div class="lower-sidebar-text">Set defaults</div>
                 <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
                 <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
                 
-                <div class="lower-sidebar-text">Test Text</div>
+                <div class="lower-sidebar-text">Filter by Category</div>
                 <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
                 <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
                 <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
