--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -55,15 +55,17 @@
             </div>
             
             <div class="sidebar-lower">
-                
+
                 <div class="lower-sidebar-text">Set defaults</div>
-                <div class="checkbox"><input type="checkbox" checked/>&nbsp;Test</div>
+                <div class="checkbox"><input type="checkbox" checked />&nbsp;Test</div>
                 <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
-                
+
                 <div class="lower-sidebar-text">Filter by Category</div>
-                <div class="checkbox"><input type="checkbox" checked/>&nbsp;Test</div>
+                <div class="checkbox"><input type="checkbox" checked />&nbsp;Test</div>
                 <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
-                <div class="checkbox"><input type="checkbox" checked/>&nbsp;Test</div>
+                <div class="checkbox"><input type="checkbox" checked />&nbsp;Test</div>
+                <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
+                <div class="checkbox"><input type="checkbox" checked />&nbsp;Test</div>
                 <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
             </div>
 
