Embed apple earbuds image into listing

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -72,7 +72,7 @@
         </div>
         
         <main role="main" class="pb-3">
-            <div class="listing"><div class="listing-img"></div></div>
+            <div class="listing"><div class="listing-img"><img src="~/img/AppleEarbudsSmall.jpg"></div></div>
             <div class="listing"><div class="listing-img"></div></div>
             <div class="listing"><div class="listing-img"></div></div>
             @RenderBody()
