--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -72,9 +72,15 @@
         </div>
         
         <main role="main" class="pb-3">
-            <div class="listing"><div class="listing-img"><img src="~/img/AppleEarbudsSmall.jpg"></div></div>
-            <div class="listing"><div class="listing-img"></div></div>
-            <div class="listing"><div class="listing-img"></div></div>
+            <div class="listing">
+                <div class="listing-img"><img src="~/img/AppleEarbudsSmall.jpg"></div>
+            </div>
+            <div class="listing">
+                <div class="listing-img"></div>
+            </div>
+            <div class="listing">
+                <div class="listing-img"></div>
+            </div>
             @RenderBody()
         </main>
     </div>
