Add test text for item listing on homepage

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -74,7 +74,7 @@
         <main role="main" class="pb-3">
             <div class="listing">
                 <div class="listing-img"><img src="~/img/AppleEarbudsSmall.jpg"></div>
-                <div class="listing-item"></div>
+                <div class="listing-item">Test</div>
             </div>
             <div class="listing">
                 <div class="listing-img"></div>
