--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -75,6 +75,7 @@
             <div class="listing">
                 <div class="listing-img"><img src="~/img/AppleEarbudsSmall.jpg"></div>
                 <div class="listing-item-title">Test</div>
+                <div class="listing-item-date-person">Test</div>
                 <div class="listing-item-text">Test2</div>
             </div>
             <div class="listing">
