Put Title and Date/person on same line

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -70,14 +70,16 @@
     background-color: lightgray;
 }
 
-.listing-item-title{
+.listing-item-title {
     margin-left: 115px;
     margin-top: 10px;
     font-weight: bold;
+    display: inline;
 }
 
-.listing-item-date-person{
+.listing-item-date-person {
     text-align: right;
+    display: inline;
 }
 
 .listing-item-text {
