Fix Item listing title/date/person to cling to their respective edges

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -74,8 +74,8 @@
         <main role="main" class="pb-3">
             <div class="listing">
                 <div class="listing-img"><img src="~/img/AppleEarbudsSmall.jpg"></div>
-                <div class="listing-item-title">Test</div>
-                <div class="listing-item-date-person">Test</div>
+                <div class="listing-item-title" style="float:left">Test</div>
+                <div class="listing-item-date-person" style="float:right">Test</div>
                 <div class="listing-item-text">Test2</div>
             </div>
             <div class="listing">
