--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -71,15 +71,17 @@
 }
 
 .listing-item-title {
-    margin-left: 115px;
+    margin-left: 15px;
     margin-top: 10px;
     font-weight: bold;
-    display: inline;
+    text-align:left;
+    display: inline-block;
 }
 
 .listing-item-date-person {
+    margin-top: 10px;
     text-align: right;
-    display: inline;
+    display: inline-block;
 }
 
 .listing-item-text {
