Add in more useful test text for item listing

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -74,9 +74,9 @@
         <main role="main" class="pb-3">
             <div class="listing">
                 <div class="listing-img"><img src="~/img/AppleEarbudsSmall.jpg"></div>
-                <div class="listing-item-title" style="float:left">Test</div>
-                <div class="listing-item-date-person" style="float:right">Test</div>
-                <div class="listing-item-text">Test2</div>
+                <div class="listing-item-title" style="float:left">Apple Earbuds</div>
+                <div class="listing-item-date-person" style="float:right">January 23, 2020 by dherstad</div>
+                <div class="listing-item-text">Great earbuds, only $75!</div>
             </div>
             <div class="listing">
                 <div class="listing-img"></div>
