Fix right margin on date/person for item listing

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -81,6 +81,7 @@
 .listing-item-date-person {
     margin-top: 10px;
     text-align: right;
+    margin-right: 15px;
     display: inline-block;
 }
 
