--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -80,15 +80,15 @@
             </div>
             <div class="listing">
                 <div class="listing-img"><img src="~/img/AppleEarbudsSmall.jpg"></div>
-                <div class="listing-item-title" style="float:left">Apple Earbuds</div>
+                <div class="listing-item-title" style="float:left">Apple Earbuds2</div>
                 <div class="listing-item-date-person" style="float:right">January 23, 2020 by dherstad</div>
-                <div class="listing-item-text">Great earbuds, only $75!</div>
+                <div class="listing-item-text">2Great earbuds, only $75!</div>
             </div>
             <div class="listing">
                 <div class="listing-img"><img src="~/img/AppleEarbudsSmall.jpg"></div>
-                <div class="listing-item-title" style="float:left">Apple Earbuds</div>
+                <div class="listing-item-title" style="float:left">Apple Earbuds3</div>
                 <div class="listing-item-date-person" style="float:right">January 23, 2020 by dherstad</div>
-                <div class="listing-item-text">Great earbuds, only $75!</div>
+                <div class="listing-item-text">3Great earbuds, only $75!</div>
             </div>
             @RenderBody()
         </main>
