Use CSS for search box to float right

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -39,7 +39,12 @@
 
     <div class="container">
         
-        <div class="utility-bar"></div>
+        <div class="utility-bar">
+            <div class="search-bar">
+                <button type="submit" class="search-button">Submit</button>
+                <input type="text" placeholder="Search.." name="search" class="search-input">
+            </div>
+        </div>
 
         <!-- A container for the sidebar information-->
         <div class="sidebar">
