--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -1,4 +1,16 @@
-﻿.lower-sidebar-text {
+﻿.search-bar{
+    float: right;
+}
+
+.search-input{
+    float:right;
+}
+
+.search-button{
+    float:right;
+}
+
+.lower-sidebar-text {
     margin-left: 30px;
     margin-top: 10px;
     font-style: italic;
