Add sort by dropdown next to search

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -41,6 +41,12 @@
         
         <div class="utility-bar">
             <div class="search-bar">
+                <select name="SortBy" id="SortBy" class="sort-by">
+                    <option value="newest">Newest</option>
+                    <option value="oldest">Oldest</option>
+                    <option value="user">User A-Z</option>
+                    <option value="itemTitle">Item Title</option>
+                </select>
                 <button type="submit" class="search-button">Submit</button>
                 <input type="text" placeholder="Search.." name="search" class="search-input">
             </div>
