Change submit to search (button)

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
                     <option value="user">User A-Z</option>
                     <option value="itemTitle">Item Title</option>
                 </select>
-                <button type="submit" class="search-button">Submit</button>
+                <button type="submit" class="search-button">Search</button>
                 <input type="text" placeholder="Search.." name="search" class="search-input">
             </div>
         </div>
