Add + new post button

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
     <div class="container">
         
         <div class="utility-bar">
+            <div class="new-post">
+                + New Post
+            </div>
             <div class="search-bar">
                 <select name="SortBy" id="SortBy" class="sort-by">
                     <option value="newest">Newest</option>
