--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -3,6 +3,8 @@
     display: inline-block;
     font-size: large;
     width: 210px;
+    border: 1px solid #AA0000;
+    border-right: 1px solid #AA0000;
 }
 
 .search-bar {
