--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -1,7 +1,7 @@
 ﻿.new-post {
     float: left;
     display: inline-block;
-    font-size: large;
+    font-size: x-large;
     width: 209px;
     height: 100%;
     border-right: 1px solid #AA0000;
