Make + new post bold

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -2,6 +2,7 @@
     float: left;
     display: inline-block;
     font-size: x-large;
+    font-weight: bold;
     width: 209px;
     height: 100%;
     border-right: 1px solid #AA0000;
