Vertically align + new post button

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -5,6 +5,8 @@
     font-weight: bold;
     width: 209px;
     height: 100%;
+    text-align: center;
+    line-height: 50px;
     border-right: 1px solid #AA0000;
 }
 
