Separate + from New Post into sub divs

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -41,7 +41,12 @@
         
         <div class="utility-bar">
             <div class="new-post">
-                + New Post
+                <div class="new-post-plus">
+                    +
+                </div>
+                <div class="new-post-afterplus">
+                    New Post
+                </div>
             </div>
             <div class="search-bar">
                 <select name="SortBy" id="SortBy" class="sort-by">
