Resize header to be correct width

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <header>
+    <header class="header-css">
         <!-- Our custom built header class. -->
         <div class="reuse-header"></div>
 
