Fix header background color to be SU red

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -65,7 +65,7 @@
 /* .reused-header is our custom built header for ReuseSU*/
 .reuse-header {
     height: 100px;
-    background-color: red;
+    background-color: #aa0000;
 }
 
 .utility-bar {
