Add ReuseSU as header title

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -12,7 +12,12 @@
 
     <header class="header-css">
         <!-- Our custom built header class. -->
-        <div class="reuse-header"></div>
+        <div class="reuse-header">
+            <div class="header-title">
+                ReuseSU
+            </div>
+
+        </div>
 
         <!--
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-SURed border-bottom box-shadow mb-3">
