format ReuseSU in header

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -1,4 +1,11 @@
-﻿.header-css{
+﻿.header-title {
+    font-size: 48px;
+    font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+}
+
+.header-css{
     width: 1110px;
     margin-left: auto;
     margin-right: auto;
