Re-center ReuseSU in header

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -12,10 +12,10 @@
 
     <header class="header-css">
         <!-- Our custom built header class. -->
+
         <div class="reuse-header">
             <div class="header-image">
-                <img src =
-                     "https://www.seattleu.edu/media/marketing-communications/branding/spirit-marks/marcom-spirit-marks/SUinterlock.png"
+                <img src="https://www.seattleu.edu/media/marketing-communications/branding/spirit-marks/marcom-spirit-marks/SUinterlock.png"
                      width="100" height="100">
             </div>
             <div class="header-title">
