--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -2,6 +2,7 @@
 .reuse-header {
     height: 100px;
     background-color: #aa0000;
+    text-align: center;
 }
 
 .header-image {
@@ -18,6 +19,9 @@
     text-align: center;
     text-shadow: -1px 0 floralwhite, 0 1px floralwhite, 1px 0 floralwhite, 0 -1px floralwhite;
     display: inline-block;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0%);
 }
 
 .header-css{
