Add motto to header

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -21,7 +21,9 @@
             <div class="header-title">
                 ReuseSU
             </div>
-
+            <div>
+                Simple, sustainable sharing
+            </div>
         </div>
 
         <!--
