Format motto in header

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             <div class="header-title">
                 ReuseSU
             </div>
-            <div>
+            <div class="header-motto">
                 Simple, sustainable sharing
             </div>
         </div>
