--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -27,7 +27,10 @@
 .header-motto{
     float: right;
     font-style: italic;
+    font-size: x-large;
     text-align: right;
+    margin-top: 30px;
+    margin-right: 10px;
 }
 
 .header-css{
