--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -121,6 +121,12 @@
                 <div class="listing-item-date-person" style="float:right">January 23, 2020 by dherstad</div>
                 <div class="listing-item-text">3 Great earbuds, only $75!</div>
             </div>
+            <div class="listing">
+                <div class="listing-img"><img src="~/img/AppleEarbudsSmall.jpg"></div>
+                <div class="listing-item-title" style="float:left">Apple Earbuds 4</div>
+                <div class="listing-item-date-person" style="float:right">January 23, 2020 by dherstad</div>
+                <div class="listing-item-text">4 Great earbuds, only $75!</div>
+            </div>
             @RenderBody()
         </main>
     </div>
