Listings given +10px height, 5px padding to prepare for curved corners testing.

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -145,7 +145,8 @@
 }
 
 .listing {
-    height: 102px;
+    height: 112px;
+    padding: 5px;
     width: 850px;
     float: right;
     background-color: floralwhite;
