Border radius for listings changed to 10 px, padding to 10px, height to 122px.

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -145,8 +145,9 @@
 }
 
 .listing {
-    height: 112px;
-    padding: 5px;
+    border-radius: 10px;
+    height: 122px;
+    padding: 10px;
     width: 850px;
     float: right;
     background-color: floralwhite;
