.listing backgrounds set to BBB

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -150,7 +150,7 @@
     padding: 10px;
     width: 850px;
     float: right;
-    background-color: floralwhite;
+    background-color: BBB;
     border: 1px solid #AA0000;
     margin-top: 40px;
 }
