--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -117,7 +117,7 @@
 }
 
 .sidebar {
-    background-color: white;
+    background-color: #BBB;
     width: 210px;
     float: left;
     height: 500px;
