--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -130,7 +130,7 @@
 .sidebar-upper-button {
     width: 150px;
     margin: 5px 10px;
-    background-color:lightgray;
+    background-color: #EEE;
 }
 
 /*The bottom sidebar. Borders individually set so both the upper and the lower sidebar don't combine to form a 2px border between them.*/
