--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -145,7 +145,7 @@
     padding: 10px;
     width: 850px;
     float: right;
-    background-color: BBB;
+    background-color: #EEE;
     border: 1px solid #AA0000;
     margin-top: 40px;
 }
