--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -121,7 +121,8 @@
 }
 
 .sidebar-upper {
-    height: 250px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     border-left: 1px solid #AA0000;
     border-right: 1px solid #AA0000;
     text-align: center;
