.sidebar-upper given border color of #CCC

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -124,8 +124,8 @@
 .sidebar-upper {
     padding-top: 5px;
     padding-bottom: 5px;
-    border-left: 1px solid #AA0000;
-    border-right: 1px solid #AA0000;
+    border-left: 1px solid #CCC;
+    border-right: 1px solid #CCC;
     text-align: center;
 }
 
