.new-post given border color of #CCC

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -68,7 +68,7 @@
     width: 209px;
     height: 100%;
     text-align: center;
-    border-right: 1px solid #AA0000;
+    border-right: 1px solid #CCC;
 }
 
 .search-bar {
