--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -111,9 +111,9 @@
 .utility-bar {
     height: 50px;
     border: 1px solid #AA0000;
-    border-bottom: 1px solid #AA0000;
-    border-left: 1px solid #AA0000;
-    border-right: 1px solid #AA0000;
+    border-bottom: 1px solid #CCC;
+    border-left: 1px solid #CCC;
+    border-right: 1px solid #CCC;
 }
 
 .sidebar {
