--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -148,7 +148,10 @@
 
 <div class="modal" id="tutModal">
     <div class="modal-dialog">
+        <div class="modal-content">
 
+
+        </div>
     </div>
 </div>
 
