--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -149,6 +149,9 @@
 <div class="modal" id="tutModal">
     <div class="modal-dialog">
         <div class="modal-content">
+            <div class="modal-header">
+
+            </div>
 
 
         </div>
