div of class modal-footer created in modal-content div

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -149,6 +149,7 @@
 <div class="modal" id="tutModal">
     <div class="modal-dialog">
         <div class="modal-content">
+
             <div class="modal-header">
 
             </div>
@@ -157,6 +158,9 @@
 
             </div>
 
+            <div class="modal-footer">
+
+            </div>
 
         </div>
     </div>
