--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -151,7 +151,7 @@
         <div class="modal-content">
 
             <div class="modal-header">
-
+                <h4 class="modal-title">Tutorial</h4>
             </div>
 
             <div class="modal-body">
