--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -155,7 +155,7 @@
             </div>
 
             <div class="modal-body">
-
+                Tutorial information.<br /><br />Thing.
             </div>
 
             <div class="modal-footer">
