--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -159,7 +159,7 @@
             </div>
 
             <div class="modal-footer">
-
+                <button type="button" class="btn btn-danger" data-dismiss="modal">End tutorial</button>
             </div>
 
         </div>
