Changed .listing to have #CCC colored borders

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -148,7 +148,7 @@
     width: 850px;
     float: right;
     background-color: #f7f7f7;
-    border: 1px solid #AA0000;
+    border: 1px solid #CCC;
     margin-top: 40px;
 }
 
