Comment for container div.

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -49,6 +49,7 @@
             -->
     </header>
 
+    <!-- Contains everything below the header, except modal divs -->
     <div class="container">
 
         <div class="utility-bar">
