Comment to identify the utility-bar div.

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -52,6 +52,7 @@
     <!-- Contains everything below the header, except modal divs -->
     <div class="container">
 
+        <!-- Contains the New Post and Search functionality -->
         <div class="utility-bar">
             <div class="new-post">
                 <div class="new-post-plus">
