Upper sidebar div identified in comment

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -77,6 +77,7 @@
         <!-- A container for the sidebar information-->
         <div class="sidebar">
 
+            <!-- The upper box of the left sidebar -->
             <div class="sidebar-upper">
 
                 <button type="button" class="btn btn-outline-dark sidebar-upper-button">Home</button><br />
