Lower box of the left sidebar identified in comment

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -90,6 +90,7 @@
 
             </div>
 
+            <!-- Lower box of the left sidebar -->
             <div class="sidebar-lower">
 
                 <div class="lower-sidebar-text">Set defaults</div>
